@@ -1041,6 +1041,7 @@ t/data/release/config/haplotype_caller_on_study_specific_reference/product_relea
 t/data/release/config/notify_off/product_release.yml
 t/data/release/config/notify_on/product_release.yml
 t/data/release/config/qc_review/product_release.yml
+t/data/release/config/qc_review_default/product_release.yml
 t/data/release/config/pp_archival/product_release.yml
 t/data/release/config/pp_archival/product_release_no_array.yml
 t/data/release/config/pp_archival/product_release_no_filters.yml
