@@ -5,19 +5,21 @@ default:
 study:
   - study_id: "1713"
     robo_qc:
+      qc_type: "mqc"
       criteria:
         - applicability_criteria:
-          lims:
-            - library_type:
-              - "Agilent Pulldown"
+            lims:
+              library_type:
+                - "Agilent Pulldown"
           acceptance_criteria:
             - "criteria1"
   - study_id: "2410"
     robo_qc:
+      qc_type: "mqc"
       criteria:
         - applicability_criteria:
-          lims:
-            - library_type:
-              - "Custom"
+            lims:
+              library_type:
+                - "Custom"
           acceptance_criteria:
             - "criteria2"
