@@ -34,5 +34,5 @@ Lane,Sample_ID,Sample_Name,GenomeFolder,Index,bait_name,default_library_type,def
 6,6093530,ERS183155,,TTAATC,,qPCR only,GCCAATGT,,is1@sanger.ac.uk jec@sanger.ac.uk kdj@sanger.ac.uk ncb@sanger.ac.uk nw6@sanger.ac.uk rw4@sanger.ac.uk sm11@sanger.ac.uk,is1@sanger.ac.uk jec@sanger.ac.uk kdj@sanger.ac.uk nw6@sanger.ac.uk rw4@sanger.ac.uk,ncb@sanger.ac.uk sm11@sanger.ac.uk,jec@sanger.ac.uk,,0,0,,,dag1_wt3 6093530,zebrafish,7955,S4301,82,ZF molecular phenotype,standard,,,from:70 to:270,ERS183155,,Danio rerio,,3%27 end enriched mRNA from morphologically normal sibling embryos from dag1 knockout incross 3. A 6 base indexing sequence (TTAATC) is bases 5 to 10 of read 1 followed by polyT.  More information describing the mutant phenotype can be found at the Wellcome Trust Sanger Institute Zebrafish Mutation Project website http%3A%2F%2Fwww.sanger.ac.uk%2Fcgi-bin%2FProjects%2FD_rerio%2Fzmp%2Fsearch.pl%3Fq%3Dzmp_phD,,1503354,dag1_wt3,Zebrafish dag1 wt3,Danio_rerio (zv9),,168,ERP001559,1,0,0,Total RNA was extracted from wild type and mutant zebrafish embryos.  Double stranded cDNA representing the 3%27 ends of transcripts was made by a variety of methods%2C including polyT priming and 3%27 pull down on magentic beads.   Some samples included indexing test experiments where a sequence barcode was placed within one of the sequence reads.. This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,82,ZF molecular phenotype,,,Zebrafish transcript profiling,6,
 6,4405872,phiX_for_spiked_buffers,,ACAACGCAAT,,,ACAACGCAAT,,hps@sanger.ac.uk pc10@sanger.ac.uk,pc10@sanger.ac.uk,hps@sanger.ac.uk,hps@sanger.ac.uk,,1,0,,,PhiX (10Jan12),,,,,,standard,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,1,0,0,None,198,Illumina Controls,,,,168,
 7,6101639,EGAN00001085924,,,,Custom,,,as16@sanger.ac.uk cdt@sanger.ac.uk cs4@sanger.ac.uk las@sanger.ac.uk lm5@sanger.ac.uk sd5@sanger.ac.uk sm2@sanger.ac.uk som@sanger.ac.uk,as16@sanger.ac.uk cs4@sanger.ac.uk las@sanger.ac.uk sd5@sanger.ac.uk som@sanger.ac.uk,cdt@sanger.ac.uk cs4@sanger.ac.uk lm5@sanger.ac.uk sm2@sanger.ac.uk,sm2@sanger.ac.uk,,0,0,6103057,0,PD4845a-RNA_rnaseq 6101639,Human,9606,S0814,1177,CGP Core Sequencing 10%2F12 to 09%2F13,standard,pass,4683991,from:175 to:225,EGAN00001085924,,Homo sapiens,,,,1505636,PD4845a-RNA_rnaseq,PD4845a-RNA,,,168,EGAS00001000377,1,0,0,We propose to definitively characterise the somatic genetics of triple negative breast cancer through generation of comprehensive catalogues of somatic mutations in breast cancer cases by high coverage genome sequencing coupled with integrated transcriptomic and methylation analyses.,2410,Triple Negative Breast Cancer RNA Sequencing,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),,Triple Negative Breast Cancer RNA Sequencing,,
-8,6101640,EGAN00001085925,,,,Custom,,,as16@sanger.ac.uk cdt@sanger.ac.uk cs4@sanger.ac.uk las@sanger.ac.uk lm5@sanger.ac.uk sd5@sanger.ac.uk sm2@sanger.ac.uk som@sanger.ac.uk,as16@sanger.ac.uk cs4@sanger.ac.uk las@sanger.ac.uk sd5@sanger.ac.uk som@sanger.ac.uk,cdt@sanger.ac.uk cs4@sanger.ac.uk lm5@sanger.ac.uk sm2@sanger.ac.uk,sm2@sanger.ac.uk,,0,0,6103058,0,PD4845a-RNA2_rnaseq 6101640,Human,9606,S0814,1177,CGP Core Sequencing 10%2F12 to 09%2F13,standard,pass,4683992,from:175 to:225,EGAN00001085925,,Homo sapiens,,,,1505637,PD4845a-RNA2_rnaseq,PD4845a-RNA2,,,168,EGAS00001000377,1,0,0,We propose to definitively characterise the somatic genetics of triple negative breast cancer through generation of comprehensive catalogues of somatic mutations in breast cancer cases by high coverage genome sequencing coupled with integrated transcriptomic and methylation analyses.,2410,Triple Negative Breast Cancer RNA Sequencing,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),,Triple Negative Breast Cancer RNA Sequencing,,
+8,6101640,EGAN00001085925,,,,Custom2,,,as16@sanger.ac.uk cdt@sanger.ac.uk cs4@sanger.ac.uk las@sanger.ac.uk lm5@sanger.ac.uk sd5@sanger.ac.uk sm2@sanger.ac.uk som@sanger.ac.uk,as16@sanger.ac.uk cs4@sanger.ac.uk las@sanger.ac.uk sd5@sanger.ac.uk som@sanger.ac.uk,cdt@sanger.ac.uk cs4@sanger.ac.uk lm5@sanger.ac.uk sm2@sanger.ac.uk,sm2@sanger.ac.uk,,0,0,6103058,0,PD4845a-RNA2_rnaseq 6101640,Human,9606,S0814,1177,CGP Core Sequencing 10%2F12 to 09%2F13,standard,pass,4683992,from:175 to:225,EGAN00001085925,,Homo sapiens,,,,1505637,PD4845a-RNA2_rnaseq,PD4845a-RNA2,,,168,EGAS00001000377,1,0,0,We propose to definitively characterise the somatic genetics of triple negative breast cancer through generation of comprehensive catalogues of somatic mutations in breast cancer cases by high coverage genome sequencing coupled with integrated transcriptomic and methylation analyses.,2410,Triple Negative Breast Cancer RNA Sequencing,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),,Triple Negative Breast Cancer RNA Sequencing,,
 
